syntax = "proto3";

package portfolio.v1;

// import "buf/validate/validate.proto";

service CastService {
  rpc GetCastProfile(GetCastProfileRequest) returns (GetCastProfileResponse);
  rpc GetCastProfileBySlug(GetCastProfileBySlugRequest) returns (GetCastProfileResponse);
  rpc CreateCastProfile(CreateCastProfileRequest) returns (CreateCastProfileResponse);
  rpc SaveCastProfile(SaveCastProfileRequest) returns (SaveCastProfileResponse);
  rpc SaveCastVisibility(SaveCastVisibilityRequest) returns (SaveCastVisibilityResponse);
  rpc SaveCastImages(SaveCastImagesRequest) returns (SaveCastImagesResponse);
  // SaveCastPlans and SaveCastSchedules moved to OfferService
  rpc ListCasts(ListCastsRequest) returns (ListCastsResponse);
  rpc GetUploadUrl(GetUploadUrlRequest) returns (GetUploadUrlResponse);
  rpc CheckSlugAvailability(CheckSlugAvailabilityRequest) returns (CheckSlugAvailabilityResponse);
  rpc ListAreas(ListAreasRequest) returns (ListAreasResponse);
  rpc ListGenres(ListGenresRequest) returns (ListGenresResponse);
  rpc ListPopularTags(ListPopularTagsRequest) returns (ListPopularTagsResponse);
}

enum CastVisibility {
  CAST_VISIBILITY_UNSPECIFIED = 0;
  CAST_VISIBILITY_PUBLIC = 1;   // Anyone can follow without approval
  CAST_VISIBILITY_PRIVATE = 2;  // Follow requires approval
}

message SocialLinks {
  string x = 1;
  string instagram = 2;
  string tiktok = 3;
  string cityheaven = 4;
  string litlink = 5;
  repeated string others = 6;
}

message ThreeSizes {
  int32 bust = 1;
  int32 waist = 2;
  int32 hip = 3;
  string cup = 4;
}

message Area {
  string id = 1;
  string prefecture = 2;
  string name = 3;
  string code = 4;
}

message CastProfile {
  string user_id = 1;
  string name = 2;
  string bio = 3;
  string image_url = 4;
  CastVisibility visibility = 5;
  repeated string images = 6;
  string image_path = 7;
  string tagline = 8;
  string default_schedule_start = 9;
  string default_schedule_end = 10;
  SocialLinks social_links = 11;
  int32 age = 12;
  int32 height = 13;
  string blood_type = 14;
  ThreeSizes three_sizes = 15;
  repeated string tags = 16;
  string avatar_path = 17;
  string avatar_url = 18;
  string slug = 19;
  repeated Area areas = 20;
  repeated Genre genres = 21;
  bool is_online = 22; // Currently within scheduled availability
  string id = 23; // Cast profile ID
  string registered_at = 24; // Onboarding completion timestamp (empty if not registered)
}

message CastPlan {
  string id = 1;
  string name = 2;
  int32 price = 3; // JPY (0 = Ask)
  int32 duration_minutes = 4;
  bool is_recommended = 5;
}

message GetCastProfileRequest {
  string user_id = 1; // [(buf.validate.field).string.uuid = true];
}

message GetCastProfileResponse {
  CastProfile profile = 1;
  // plans and schedules moved to OfferService.GetPlans/GetSchedules
}

message CreateCastProfileRequest {
  string name = 1;
  string bio = 2;
  string image_path = 3;
  string tagline = 4;
  string default_schedule_start = 5;
  string default_schedule_end = 6;
  SocialLinks social_links = 7;
  int32 age = 8;
  int32 height = 9;
  string blood_type = 10;
  ThreeSizes three_sizes = 11;
  repeated string tags = 12;
  repeated string genre_ids = 13;
}

message CreateCastProfileResponse {
  CastProfile profile = 1;
}

message SaveCastProfileRequest {
  string name = 1;
  string bio = 2;
  string image_path = 3;
  string tagline = 4;
  string default_schedule_start = 5;
  string default_schedule_end = 6;
  SocialLinks social_links = 7;
  CastVisibility visibility = 8;
  int32 age = 9;
  int32 height = 10;
  string blood_type = 11;
  ThreeSizes three_sizes = 12;
  repeated string tags = 13;
  string slug = 14;
  repeated string area_ids = 15;
  repeated string genre_ids = 16;
}

message SaveCastProfileResponse {
  CastProfile profile = 1;
}

message SaveCastVisibilityRequest {
  CastVisibility visibility = 1;
}

message SaveCastVisibilityResponse {
  CastProfile profile = 1;
}

message SaveCastImagesRequest {
  string profile_image_path = 1; // Cover/Profile image
  repeated string gallery_images = 2; // List of image URLs or Paths
  string avatar_path = 3;             // Square avatar image (S3 key)
}

message SaveCastImagesResponse {
  CastProfile profile = 1;
}

// SaveCastPlans and SaveCastSchedules moved to OfferService

message GetUploadUrlRequest {
  string filename = 1;
  string content_type = 2;
}

message GetUploadUrlResponse {
  string url = 1;
  string key = 2;
}

// CastSchedule moved to offer.v1.Schedule

enum CastStatusFilter {
  CAST_STATUS_FILTER_UNSPECIFIED = 0;
  CAST_STATUS_FILTER_ONLINE = 1;      // Has active schedule today
  CAST_STATUS_FILTER_NEW = 2;         // Created within 7 days
  CAST_STATUS_FILTER_RANKING = 3;     // By popularity (future)
}

message ListCastsRequest {
  // Visibility filter (default: published only)
  CastVisibility visibility_filter = 1;
  // Filter by genre ID
  string genre_id = 2;
  // Filter by tag name
  string tag = 3;
  // Filter by status (online, new, ranking)
  CastStatusFilter status_filter = 4;
  // Filter by area ID
  string area_id = 5;
  // Pagination (cursor-based)
  int32 limit = 6;
  string cursor = 7; // Base64-encoded cursor for pagination
  // Text search query (searches name, tagline, tags)
  string query = 8;
}

message ListCastsResponse {
  message CastItem {
    CastProfile profile = 1;
    repeated CastPlan plans = 2;
  }
  repeated CastItem items = 1;
  // Pagination
  string next_cursor = 2; // Base64-encoded cursor for next page
  bool has_more = 3;      // Whether more items are available
}

message GetCastProfileBySlugRequest {
  string slug = 1;
}

message CheckSlugAvailabilityRequest {
  string slug = 1;
}

message CheckSlugAvailabilityResponse {
  bool available = 1;
  string message = 2;
}

message ListAreasRequest {
  // Optional: filter by prefecture
  string prefecture = 1;
}

message ListAreasResponse {
  repeated Area areas = 1;
}

// === Genre ===

message Genre {
  string id = 1;
  string name = 2;
  string slug = 3;
  int32 display_order = 4;
}

message ListGenresRequest {
  // Empty for now, returns all active genres
}

message ListGenresResponse {
  repeated Genre genres = 1;
}

// === Popular Tags ===

message PopularTag {
  string name = 1;
  int32 usage_count = 2;
}

message ListPopularTagsRequest {
  int32 limit = 1; // Default: 20
}

message ListPopularTagsResponse {
  repeated PopularTag tags = 1;
}
